--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -1,7 +1,7 @@
 .link-container {
-   a.active {
-      color: brown;
-   } 
+   a.active { 
+      color: brown !important;
+   }   
    ul { 
       margin: 0;
       padding: 0;
@@ -13,4 +13,84 @@
       }
    }
 }
+
+a:focus { 
+   outline: none !important;
+}
+
+.sticky-sidebar { 
+   position: sticky;
+   top: 15px;
+}
+
+.container-404 { 
+   margin-top: 3rem;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   a { 
+      display: flex;
+      align-items: center;
+      font-size: 1rem;
+      line-height: 1rem; 
+
+      padding: 15px 25px 18px 25px;
+      margin-top: 30px;
+
+      background: var(--dark); 
+      color: white;
+      transition: 300ms ease all;
+      &:hover { 
+         text-decoration: none;
+         background: lighten( #000, 15%);
+      }
+   }
+}
  
+
+.empty-container {
+    border: 1px solid rgba(0, 0, 0, 0.08);
+    background: rgba(255, 255, 255, 0.1);
+    padding: 25px;
+    border-radius: 4px;
+
+    display: flex;
+    flex-direction: column;
+    >span { 
+      display: block;
+      height: 15px;
+      width: 100%;
+      max-width: 350px;
+      background: rgba(0, 0, 0, 0.03);
+      border-radius: 4px;
+      margin: 10px 0;
+    }
+    >div {  
+       display: flex;
+       >span {   
+          display: block;
+         width: 33%;
+         margin: 15px 10px ;
+         background: rgba(0, 0, 0, 0.03);
+         border-radius: 4px; 
+         height: 15px; 
+         &:first-child { 
+            margin-left: 0;
+         }
+         &:last-child {
+            margin-right: 0;
+         }
+       }
+    }
+    >p { 
+      width: 50%;
+      margin-top: 10px;
+      margin-bottom: 0;
+      background: rgba(0, 0, 0, 0.03);
+      border-radius: 4px; 
+      height: 80px;  
+    }
+    h5 { 
+       color: rgba(0, 0, 0, 0.32);
+    }
+}
