--- a/src/assets/style/_header.scss
+++ b/src/assets/style/_header.scss
@@ -9,6 +9,7 @@
         padding: 0 11px;
         font-size: 14px;
         color: #fff;
+        text-decoration: none;
         transition: all 0.3s ease-in-out;   
         &:hover { 
             background: #974726;
