--- a/src/assets/style/_styles-prev.scss
+++ b/src/assets/style/_styles-prev.scss
@@ -453,7 +453,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   color: #414141;
-  font-family: 'roboto_condensed', Arial, Helvetica, sans-serif;
+  // font-family: 'roboto_condensed', Arial, Helvetica, sans-serif; 
   font-weight: bold;
   font-style: normal; }
 
