--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -107,11 +107,16 @@ a:focus {
     }
 }
 
+footer { 
+   margin-top: 3em;
+}
+
 .image-230 { 
    width: 230px;
    height: 230px;
    display: inline-block;
-   margin: 15px;
+   margin-right: 15px;
+   margin-bottom: 15px;
 }
  
 .float-left { 
