--- a/src/assets/style/_header.scss
+++ b/src/assets/style/_header.scss
@@ -57,11 +57,15 @@
                     border-top: 0;
                 }
                 a { 
+                    text-decoration: none;
                     display: block;
                     color: #fff;
                     font-size: 16px;
                     padding: 7px 10px 7px 20px;
                     transition: all 0.3s ease-in-out;   
+                    &.active {
+                        background: #7c3a1f;
+                    }
                     &:hover { 
                         text-decoration: none;
                         background: #7c3a1f;
